Updated sidebar and added background behind it to prevent clicking or scrolling

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,19 +73,36 @@
 }
 
 /* Sidebar */
+.sidebar-background {
+    position:fixed;
+    top: 0;
+    right: 0;
+    height:100lvh;
+    width:100vw;
+    background-color: black;
+    opacity:0;
+    transition: opacity 0.3s ease-in-out;
+    z-index:998;
+    pointer-events: none;
+}
+
+.sidebar-background-active {
+    opacity:0.7;
+}
 
 .sidebar {
     position: fixed;
     top: 0;
     right: 0;
     height:100lvh;
-    width:100vw;
+    width:75vw;
     background-color: lightslategray;
     transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     z-index: 999;
     display:flex;
     flex-direction: column;
+    opacity:0;
 }
 
 .sidebar div {
@@ -107,6 +124,7 @@
 
 .sidebar-active {
   transform: translateX(0);
+  opacity:1;
 }
 
 #sidebar i:hover, #nav i:hover {
